tests/fsharp/typecheck/sigs/neg30.bsl

neg30.fs(28,6,28,19): typecheck error FS0954: This type definition involves an immediate cyclic reference through a struct field or inheritance relation

neg30.fs(43,7,43,21): typecheck error FS0001: A generic construct requires that the type 'SManaged' is an unmanaged type

neg30.fs(44,7,44,30): typecheck error FS0001: A generic construct requires that the type 'SManagedRecursive' is an unmanaged type

neg30.fs(45,7,45,16): typecheck error FS0001: A generic construct requires that the type 'obj' is an unmanaged type

neg30.fs(46,7,46,26): typecheck error FS0001: A generic construct requires that the type 'SBadRecursion' is an unmanaged type

neg30.fs(47,6,47,8): typecheck error FS0001: A generic construct requires that the type 'FSharpUnion' is an unmanaged type

neg30.fs(59,13,59,24): typecheck error FS0001: A generic construct requires that the type 'SManaged' is an unmanaged type

neg30.fs(60,13,60,33): typecheck error FS0001: A generic construct requires that the type 'SManagedRecursive' is an unmanaged type

neg30.fs(61,13,61,19): typecheck error FS0001: A generic construct requires that the type 'obj' is an unmanaged type

neg30.fs(62,13,62,29): typecheck error FS0001: A generic construct requires that the type 'SBadRecursion' is an unmanaged type

neg30.fs(63,13,63,27): typecheck error FS0001: A generic construct requires that the type 'FSharpUnion' is an unmanaged type

neg30.fs(71,12,71,35): typecheck error FS0120: hello!

neg30.fs(71,12,71,35): typecheck error FS0120: hello!

neg30.fs(71,12,71,35): typecheck error FS0120: hello!

neg30.fs(78,13,78,37): typecheck error FS10021: hello!
